--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Run collectstatic
+        run: python manage.py collectstatic --noinput
+
       - name: Run linting
         run: flake8 --max-line-length=99
 
