Made start sh executable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     volumes:
       - .:/app
     environment:
-      - SECRET_KEY=${SECRET_KEY}  # This will pass SECRET_KEY to the container
+      - SECRET_KEY=${SECRET_KEY}
