--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,10 @@ version: 2
 build:
   os: ubuntu-24.04
   tools:
-    python: "3.13"
+    python: "3.10"
+  jobs:
+    pre_build:
+      - pip install --upgrade pip
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
@@ -17,7 +20,10 @@ sphinx:
 # Optionally, but recommended,
 # declare the Python requirements required to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+python:
+   install:
+    - method: pip
+      requirements: requirements.txt
+    - method: pip
+      requirements: doc/source/requirements.txt 
         
