--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,50 @@
+alabaster==1.0.0
 asgiref==3.8.1
+babel==2.17.0
 certifi==2025.1.31
+charset-normalizer==3.4.2
 colorama==0.4.6
 coverage==7.7.1
-Django==3.0
+dj-database-url==3.0.0
+Django==5.2.2
 django-environ==0.12.0
+docutils==0.21.2
 entrypoints==0.3
 exceptiongroup==1.2.2
 flake8==3.7.0
 gunicorn==23.0.0
+idna==3.10
+imagesize==1.4.1
 iniconfig==2.1.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 mccabe==0.6.1
 packaging==24.2
 pluggy==1.5.0
+psycopg2-binary
 pycodestyle==2.5.0
 pyflakes==2.1.1
+Pygments==2.19.1
 pytest==8.3.5
 pytest-cov==6.0.0
 pytest-django==3.9.0
 pytz==2025.2
+requests==2.32.3
 sentry-sdk==2.24.1
 six==1.17.0
+snowballstemmer==2.2.0
+Sphinx==8.1.3
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 sqlparse==0.5.3
 tomli==2.2.1
 typing_extensions==4.13.0
+tzdata==2025.2
 urllib3==2.3.0
 whitenoise==6.9.0
