--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       DJANGO_SETTINGS_MODULE: oc_lettings_site.settings
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      IS_DEV_OC_LETTINGS: 'true'
 
     steps:
       - name: Checkout code
